[metadata]
name = dl_lib
version = attr: dl_lib.__version__
description = dl lib :)
author = dm9pZCAq
license = GPLv3+

classifiers =
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
packages =
	dl_lib

install_requires =
	yt-dlp

python_requires = >=3.8

package_dir =
	=src

[options.package_data]
	dl_lib =
		py.typed

[options.extras_require]
	dev =
		mypy
		pylsp
		pylsp-mypy

[mypy]
strict = true

[pylsp-mypy]
enabled = true
live_mode = true
strict = true
