[metadata]
name = dl_lib
version = attr: dl_lib.__version__
description = dl lib :)
author = dm9pZCAq
license = GPLv3+

classifiers =
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
packages =
	dl_lib

install_requires =
	yt-dlp
	pika
	telethon

python_requires = >=3.8

package_dir =
	=src

[options.package_data]
dl_lib =
	py.typed

[options.extras_require]
dev =
	mypy
	python-language-server
	pylsp-mypy
test =
	pytest
	ruff

[mypy]
strict = true

[pylsp-mypy]
enabled = true
live_mode = true
strict = true

[tool:pytest]
addopts = -ra -q
log_cli = 1
log_cli_level = DEBUG
